--- a/templates/home/terms.html
+++ b/templates/home/terms.html
@@ -11,15 +11,14 @@ Luma AutoRent - Условия аренды автомобилей
         <div class="terms_left fbb">
             <div class="terms_block">
                 <h2>Требования к арендатору:</h2>
-                <h3><span>Возраст: </span>От 19 Лет</h3>
+                <h3><span>Возраст: </span>От 20 Лет</h3>
                 <h3><span>Стаж Вождения: </span>От 1 года</h3>
             </div>
             <div class="terms_block">
                 <h2>Что нужно для аренды:</h2>
                 <ul>
                     <li>
-                        <h3>Паспорт</h3>
-                        <span>Первая страница + регистрация</span>
+                        <h3>Удостоверение личности</h3>
                     </li>
                     <li>
                         <h3>Водительское удостоверение</h3>
@@ -33,13 +32,13 @@ Luma AutoRent - Условия аренды автомобилей
                 </div>
                 <p>Для аренды автомобиля требуется внесение возвратного страхового депозита, размер которого зависит от
                     выбранного автомобиля, а также стажа вождения и гражданства арендатора. Минимальный размер депозита
-                    30.000 рублей, смотрите раздел Тарифы https://moscowdreamcars.ru/price</p>
+                    30.000 Тенге</p>
             </div>
             <div class="details">
                 <div class="summary"><span>Дополнительные Водители</span><ion-icon
                         name="chevron-forward-outline"></ion-icon></div>
                 <p>Дополнительный водитель должен быть заявлен до момента начала аренды автомобиля, предоставляя
-                    оригиналы паспорта и водительского удостоверения. В стоимость включено 2 водителя. Внесение в
+                    оригиналы паспорта и водительского удостоверения. В стоимость включен 1 водитель. Внесение в
                     страховку каждого последующего водителя происходит за дополнительную плату.</p>
             </div>
         </div>
