--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,12 +3,22 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    font-family: "Roboto", sans-serif;
+    /* font-family: "Roboto", sans-serif;
     font-weight: 300;
-    font-style: normal;
+    font-style: normal; */
+    font-family: 'Futura PT';
 
     color: var(--sec-col)
 }
+
+@font-face {
+    font-family: 'Futura PT';
+    src: local('Futura PT Book'), local('Futura-PT-Book'),
+        
+        url('../fonts/FuturaPT-Book.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
 
 ::-webkit-scrollbar{
     width: 10px;
@@ -46,6 +56,10 @@
 
     --shadow: 0px 20px 30px 5px rgba(0,0,0,0.5);
     --shadow-2: 0px 0 30px 5px rgba(0,0,0,0.5);
+}
+
+html{
+    overflow-x: hidden;
 }
 
 body{
@@ -1329,10 +1343,10 @@ footer::after{
 #menu_icons a:nth-child(1){
     font-size: 0.9em;
 }
-#menu[data-menu-open="true"] #menu_icons a:nth-child(3){
+#menu[data-menu-open="true"] #menu_icons a:nth-child(4){
     display: none;
 }
-#menu[data-menu-open="false"] #menu_icons a:nth-child(4){
+#menu[data-menu-open="false"] #menu_icons a:nth-child(5){
     display: none;
 }
 
@@ -1645,6 +1659,9 @@ body:has(#menu[data-menu-open="true"]){
     .auto_card_content{
         margin-top: calc(var(--com-gap));
         gap: calc(var(--com-gap));
+    }
+    .auto_card_content h1{
+        font-size: large;
     }
 
     #car_page{
