--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
                         <a href="https://t.me/zzzzzrrrddfg" class="foo_ig"><ion-icon name="logo-instagram"></ion-icon></a>
                     </span>
                 </h2>
-                <a href="tel:+77077777777"><ion-icon name="call-outline"></ion-icon>+7 (707) 777-77-77</a>
+                <a href="tel:+77001550555"><ion-icon name="call-outline"></ion-icon>+7-700-155-05-55</a>
                 <a href="https://2gis.kz/almaty/search/Гагарин%20310к5/geo/70030076483093643/76.901577%2C43.201284"><ion-icon name="business-outline"></ion-icon>Алматы, Гагарин 310к5</a>
                 <a href=""><ion-icon name="at-outline"></ion-icon>Lumaautorent@gmail.com</a>
             </div>
