--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -14,8 +14,8 @@ Luma AutoRent
     <video class="header_video" src="{% static 'videos/your-video.mp4' %}" autoplay loop muted></video>
     <img class="header_image" src="{% static 'img/your-image.png' %}" alt="Аренда авто" />
     <div class="header_block">
-        <h1>Аренда авто премиум класса</h1>
-        <h3>У нас вы найдете самый качественный ассортимент автомобилей сдающихся в аренду</h3>
+        <h1>Номер 1 автопрокат на рынке Казахстана</h1>
+        <h3>Хотите защитить себя от мошенников? Обратитесь к нам!</h3>
         <a href="{% url 'autopark' %}" class="button">Просмотреть Автопарк <ion-icon name="arrow-forward-outline"></ion-icon></a>
     </div>
     <div class="header_contact_block">
@@ -51,7 +51,7 @@ Luma AutoRent
         <h1 id="o_company">О Компании</h1>
         <div class="page2_about">
             <div class="p2a_title">
-                Добро Пожаловать в Luma AutoRent!
+                Luma AutoRent
             </div>
             <div class="p2a_content">
                 <div class="p2a_content_text">
@@ -71,7 +71,7 @@ Luma AutoRent
                 <div class="p2a_content_text">
                     Мы предоставляем в аренду эксклюзивные автомобили, предлагая комфорт, стиль и безопасность.
                     Наслаждайтесь поездками на авто мечты без забот о ремонтах, налогах и хранении — мы обо всем
-                    позаботимся за вас!Наша компания гарантирует высокий уровень сервиса и идеальное состояние
+                    позаботимся за вас! Наша компания гарантирует высокий уровень сервиса и идеальное состояние
                     каждого автомобиля. Мы стремимся сделать каждую вашу поездку особенной и незабываемой. С
                     нами аренда автомобиля становится не просто удобством, а настоящим удовольствием.
                 </div>
