--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -14,7 +14,7 @@ Luma AutoRent
     <video class="header_video" src="{% static 'videos/your-video.mp4' %}" autoplay loop muted></video>
     <img class="header_image" src="{% static 'img/your-image.png' %}" alt="Аренда авто" />
     <div class="header_block">
-        <h1>Номер 1 автопрокат на рынке Казахстана</h1>
+        <h1>Лучший автопрокат на рынке Казахстана</h1>
         <h3>Хотите защитить себя от мошенников? Обратитесь к нам!</h3>
         <a href="{% url 'autopark' %}" class="button">Просмотреть Автопарк <ion-icon name="arrow-forward-outline"></ion-icon></a>
     </div>
