--- a/templates/home/feedbacks.html
+++ b/templates/home/feedbacks.html
@@ -11,26 +11,32 @@ Luma AutoRent - Отзывы Клиентов
     </h1>
     <div class="feedback_page_content">
         <div class="feedback_card">
-            <h2>Женя Нестеров</h2>
+            <h2>Алексей</h2>
             <div class="f_date">
-                10 мая 2020 – Яндекс карты
+                10 мая 2024
             </div>
-            <p>Брал Nissan GT-R на сутки. Очень часто пользуюсь разными прокатами, и беру самые разные авто. От АвтоВАЗа
-                и газелей вплоть до майбахов и спорткаров. В Moscow dream cars самый крутой сервис и тачки в самом
-                лучшем состоянии. Машины чистые, наполированные, даже шины почерненые. Очень клиентоориентированный
-                прокат и сотрудники (сравниваю с десятком других прокатов). Ребята, Вы лучшие, спасибо Вам. Обязательно
-                приду к Вам ещё раз. И сорри за превышения скорости, все штрафы оплачу🤪</p>
+            <p>Брал S-Class Brabus 700 на пару дней для важной встречи. Машина — это не просто автомобиль, это целая
+                революция на колесах. Мощь, комфорт, и роскошь. Невозможно не выделиться за рулем этого зверя.
+                Обслуживание в Luma Auto Rent на высоте, всегда вежливые и профессиональные сотрудники. Сдача машины
+                прошла без проблем, все быстро и удобно. Буду брать снова!</p>
         </div>
         <div class="feedback_card">
-            <h2>Женя Нестеров</h2>
+            <h2>Юрий</h2>
             <div class="f_date">
-                10 мая 2020 – Яндекс карты
+                24 октябрь 2023
             </div>
-            <p>Брал Nissan GT-R на сутки. Очень часто пользуюсь разными прокатами, и беру самые разные авто. От АвтоВАЗа
-                и газелей вплоть до майбахов и спорткаров. В Moscow dream cars самый крутой сервис и тачки в самом
-                лучшем состоянии. Машины чистые, наполированные, даже шины почерненые. Очень клиентоориентированный
-                прокат и сотрудники (сравниваю с десятком других прокатов). Ребята, Вы лучшие, спасибо Вам. Обязательно
-                приду к Вам ещё раз. И сорри за превышения скорости, все штрафы оплачу🤪</p>
+            <p>Решила взять Toyota Land Cruiser 200 TRD для семейной поездки в горы. Удобство, простор и уверенность на
+                дороге — идеальный выбор для такой местности. Машина с полным приводом, комфортная и мощная. В Luma Auto
+                Rent также все прошло без заминок, машина была готова в точно оговоренное время.</p>
+        </div>
+        <div class="feedback_card"></div>
+            <h2>Сергей</h2>
+            <div class="f_date">
+                12 апреля 2023
+            </div>
+            <p>Недавно брал Mercedes-Benz E63S для поездки по городу и за его пределами. Водить эту машину — это настоящее
+            удовольствие. Мгновенное ускорение, отличный контроль и шикарное оснащение. К тому же, весь процесс аренды
+            прошел гладко: никаких задержек, четкие инструкции, и автомобиль был в идеальном состоянии.</p>
         </div>
     </div>
 </div>
